samples/_failures_safe/1761372282_10a0af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c214c513.c: In function ‘main’:
./samples/SAFE/__tmp_c214c513.c:158:20: error: missing terminating " character
  158 |             printf("Failed to add edge %d-%d
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c214c513.c:158:13: error: expected expression at end of input
  158 |             printf("Failed to add edge %d-%d
      |             ^~~~~~
./samples/SAFE/__tmp_c214c513.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c214c513.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c214c513.c:158:13: error: expected declaration or statement at end of input
